--- a/assets/css/mainmenu.css
+++ b/assets/css/mainmenu.css
@@ -341,6 +341,10 @@ h1 {
   z-index: 2;
   background: rgba(0, 0, 0, 0.45);
   color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 .mc-top-left {
   position: absolute;
@@ -355,10 +359,10 @@ h1 {
 .mc-joystick {
   position: absolute;
   z-index: 2;
-  left: 18px;
-  bottom: 18px;
-  width: 180px;
-  height: 180px;
+  left: 50px;
+  bottom: 50px;
+  width: 250px;
+  height: 250px;
   border-radius: 50%;
   background: rgba(255, 255, 255, 0.06);
   border: 1px solid rgba(255, 255, 255, 0.15);
@@ -369,8 +373,8 @@ h1 {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  width: 100px;
-  height: 100px;
+  width: 150px;
+  height: 150px;
   border-radius: 50%;
   background: rgba(0, 0, 0, 0.55);
   z-index: 2;
@@ -391,9 +395,8 @@ h1 {
   position: absolute;
   right: 20px;
   bottom: 20px;
-  width: 100px;
-  height: 100px;
-  line-height: 88px;
+  width: 200px;
+  height: 200px;
   text-align: center;
   border-radius: 50%;
   font-size: 16px;
@@ -403,11 +406,10 @@ h1 {
 /* 交互 E：圆形，位于 Jump 的右下角（略微外扩） */
 #mc-btn-interact {
   position: absolute;
-  right: -8px; /* 轻微外扩到屏幕边缘内侧 */
-  bottom: -8px;
-  width: 56px;
-  height: 56px;
-  line-height: 56px;
+  right: 0px; /* 轻微外扩到屏幕边缘内侧 */
+  bottom: 250px;
+  width: 100px;
+  height: 100px;
   text-align: center;
   border-radius: 50%;
   font-size: 18px;
